@@ -56,6 +56,9 @@ class DukContext
     void Push(bool val)                   { duk_push_boolean(m_ctx, val); }
     void Push(int val)                    { duk_push_number(m_ctx, val); }
     void Push(short val)                  { duk_push_number(m_ctx, val); }
+    void Push(long val)                   { duk_push_number(m_ctx, val); }
+    void Push(unsigned short val)         { duk_push_uint(m_ctx, val); }
+    void Push(unsigned long val)          { duk_push_uint(m_ctx, val); }
     void Push(float val)                  { duk_push_number(m_ctx, float2double(val)); }
     void Push(double val)                 { duk_push_number(m_ctx, val); }
     void Push(const char* val)            { duk_push_string(m_ctx, val); }
